# Hands-on-Planning

./: .gitignore  Dockerfile  Dockerfile_v2  README.md
src/grid_mapping/: package.xml  setup.cfg  setup.py
src/grid_mapping/grid_mapping/: grid_map.py  occupancy_grid.py  occupancy_grid_original.py
src/kobuki_description/: CMakeLists.txt  package.xml
src/kobuki_description/launch/: rviz_description.launch
src/kobuki_description/meshes/: main_body.dae  plates.dae  rplidar.dae  wheel.dae
src/kobuki_description/resources/meshes/: main_body.dae  main_body_old.dae  wheel.dae
src/kobuki_description/rviz/: kobuki.rviz
src/kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_standalone.urdf.xacro
src/lab1_1/: NAVIGATION_GUIDE.py  package.xml  setup.cfg  setup.py  validate_system.py
src/lab1_1/lab1_1/: load_csv_files.py  map_saver.py  node.py  node_waypoint_controller.py  occupancy_grid_node.py  path_planner_rrt_star.py  path_planner_rrt_star_v2.py
src/lab1_1/launch/: planning_and_control.launch.py  turtlebot_nav_online_replanning.launch.py
src/lab1_1/msg/: Waypoint.msg
src/localization/: setup.py
src/localization/localization/: localization.py
src/octomap_rviz_plugins/: CMakeLists.txt  package.xml
src/online_motion_planning/: package.xml  setup.py
src/online_motion_planning/launch/: turtlebot_real_test.launch.py  turtlebot_simulation_hoi_circuit_1_rrt.launch.py
src/online_motion_planning/online_motion_planning/: Point.py  rrt.py  rrt_star.py  rrt_tb.py
src/swiftpro/: CMakeLists.txt  README.md  package.xml  swiftpro.xml
src/swiftpro/config/: swiftpro.yaml
src/swiftpro/firmware/: uArmPro_V1.0_direct_control.hex  uArmPro_V4.9.0_release_20200814.hex
src/swiftpro/include/swiftpro/: serial_cobs.h  serial_defs.h  swiftpro.h  swiftpro_hardware.hpp
src/swiftpro/launch/: swiftpro_standalone.launch.py
src/swiftpro/src/: swiftpro_hardware.cpp
src/swiftpro/src/swiftpro/: serial_cobs.cpp  swiftpro.cpp
src/swiftpro/urdf/: swiftpro.ros2_control.urdf.xacro  swiftpro_standalone.urdf.xacro
src/swiftpro_description/: CMakeLists.txt  package.xml
src/swiftpro_description/resources/meshes/: base.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae  link9.dae  suction_a.dae  suction_b.dae
src/swiftpro_description/rviz/: swiftpro.rviz
src/swiftpro_description/src/: swiftpro_rviz_node.cpp
src/swiftpro_description/urdf/: swiftpro.urdf.xacro  swiftpro_standalone.urdf.xacro
src/turtlebot_description/rviz/: turtlebot_rrt.rviz  turtlebot_rrt_costmap.rviz
src/turtlebot_simulation/: CMakeLists.txt  README.md  package.xml
src/turtlebot_simulation/launch/: kobuki_basic.launch.py  kobuki_pr_lab1.launch.py  swiftpro_basic.launch.py  turtlebot_basic.launch.py  turtlebot_hoi.launch.py  turtlebot_hoi_circuit1.launch.py  turtlebot_hoi_circuit2.launch.py  turtlebot_hol_circuit2_aruco.launch.py  turtlebot_integration.launch.py
src/turtlebot_simulation/scenarios/: kobuki.scn  kobuki_basic.scn  pr_kobuki.scn  swiftpro_basic.scn  swiftpro_featherstone.scn  turtlebot_basic.scn  turtlebot_featherstone.scn
src/turtlebot_simulation/scripts/: diff_drive_controller.py  diff_drive_odometry.py  odometry_to_tf.py  swiftpro_controller.py
