<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swiftpro_description</name>
  <version>3.0.0</version>
  <description>
    swiftpro_description provides a complete 3D model of the SwiftPro manipulator for simulation and visualization. 
    The files in this package are parsed and used by a variety of other components. 
    Most users will not interact directly with this package.
  </description>
  <author>Patryk Cieslak</author>
  <maintainer email="patryk.cieslak@udg.edu">Patryk Cieslak</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
